--- a/templates/fundforms/start_fund_rasing.html
+++ b/templates/fundforms/start_fund_rasing.html
@@ -140,10 +140,16 @@
                         <form action="" method="POST" role="form">
                             <legend class="visible-xs">Library</legend>
                             <div class="form-group">
-                                <label for="">Upload Photos <small>(max 5 only)</small></label>
-                               <input type="file" accept="image/*" multiple image="images" />
-                                <img ng-repeat="img in images" width="50px" height="50px" style="margin:5px;float:left;" ng-src="{{img.url}}" type="{{img.file.type}}"/> 
-                            </div><br><br><br>
+                                <label class="fileContainer">
+                                    Upload Photos Here<small>(max 5 only)</small>
+                                    <input type="file" accept="image/*" multiple image="images"/>
+                                </label>
+                                <div class="clearfix"></div>
+                                <img ng-repeat="img in images" width="50px" height="50px" style="margin:5px;float:left;" ng-src="{{img.url}}" type="{{img.file.type}}" />
+                            </div>
+                            <br>
+                            <br>
+                            <br>
                             <div class="form-group">
                                 <label for="">Video url <small>( paste url below )</small></label>
                                 <input type="text" class="form-control" id="" placeholder="paste video url here">
