--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -35,7 +35,7 @@
                     <div class="text-center">
                     
                         <p>signin with</p>
-                        <button type="submit" class="btn btn-primary no-radius"><span class="fa fa-facebook fa-1x"></span></button>
+                        <button type="submit" class="btn btn-facebook no-radius"><span class="fa fa-facebook fa-1x"></span></button>
                         <button type="submit" class="btn btn-info no-radius"><span class="fa fa-twitter fa-1x"></span></button>
                         <button type="submit" class="btn btn-danger no-radius"><span class="fa fa-google-plus fa-1x"></span></button>
                     </div>
