--- a/easy_funding/public/templates/single_campagin.html
+++ b/easy_funding/public/templates/single_campagin.html
@@ -8,9 +8,9 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <div class="panel-title">
-                            <h4 class="no-margin">Gallery</h4><a href="" style="color: white;float: right;margin-top: -20px;" ng-click="box1=!box1">click</a></div>
+                            <h4 class="no-margin">Gallery</h4><a href="" style="color: white;float: right;margin-top: -20px;" ng-click="box1=!box1"><i class="fa fa-chevron-down"></i></a></div>
                     </div>
-                    <div class="panel-body" data-slide-toggle="box1" data-slide-toggle-duration="1000">
+                    <div class="panel-body" data-slide-toggle="box1" data-slide-toggle-duration="500">
                         <div class="col-xs-12 col-sm-6 col-md-4">
                             <a href="" class="thumbnail">
                                 <img src="http://placehold.it/800x500" alt="" class="img-responsive">
@@ -48,38 +48,22 @@
                         <div class="panel-title">
                             <h4 class="no-margin inline-block">Description</h4>
                             <p class="inline-block pull-right">
-                            <a href="" ng-click="box2=!box2" class="text-white">click</a></p>
+                                <a href="" ng-click="box2=!box2" class="text-white"><i class="fa fa-chevron-down"></i></a></p>
                         </div>
                     </div>
-                    <div class="panel-body" data-slide-toggle="box2" data-slide-toggle-duration="1000">
+                    <div class="panel-body" data-slide-toggle="box2" data-slide-toggle-duration="500">
                         <div class="col-xs-12">
                             <ul class="list-unstyled list-borded description_list">
                                 <li>
-                                    <h3 class="no-margin inline-block"><small>On 4th Feb 2015</small></h3>
+                                    <h3 class="no-margin inline-block"><small>Posted on 4th Feb 2015</small></h3>
                                     <div class="dropdown inline-block">
                                         <span id="dropdownMenu1" class="pointer" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                             <span class="fa fa-share-alt"></span>
                                         </span>
                                         <ul class="dropdown-menu text-left" aria-labelledby="dropdownMenu1">
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-facebook"></i> - 20K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-twitter"></i> - 30K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-google-plus"></i> - 5K Likes</a></li>
-                                        </ul>
-                                    </div>
-                                    <article>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum provident voluptatem qui excepturi nulla rem officia vitae corrupti aperiam ipsa temporibus ullam repellat, voluptate nemo nobis unde, ex quas neque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum provident voluptatem qui excepturi nulla rem officia vitae corrupti aperiam ipsa temporibus ullam repellat, voluptate nemo nobis unde, ex quas neque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum provident voluptatem qui excepturi nulla rem officia vitae corrupti aperiam ipsa temporibus ullam repellat, voluptate nemo nobis unde, ex quas neque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum provident voluptatem qui excepturi nulla rem officia vitae corrupti aperiam ipsa temporibus ullam repellat, voluptate nemo nobis unde, ex quas neque?
-                                    </article>
-                                </li>
-                                <li>
-                                    <h3 class="no-margin inline-block"><small>On 4th Feb 2015</small></h3>
-                                    <div class="dropdown inline-block">
-                                        <span id="dropdownMenu1" class="pointer" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                            <span class="fa fa-share-alt"></span>
-                                        </span>
-                                        <ul class="dropdown-menu text-left" aria-labelledby="dropdownMenu1">
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-facebook"></i> - 20K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-twitter"></i> - 30K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-google-plus"></i> - 5K Likes</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-facebook"></i> - 20K Share</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-twitter"></i> - 30K Share</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-google-plus"></i> - 5K Share</a></li>
                                         </ul>
                                     </div>
                                     <article>
@@ -93,9 +77,9 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <div class="panel-title">
-                            <h4 class="no-margin">Updates</h4><a href="" style="color: white;float: right;margin-top: -20px;" ng-click="box3=!box3">click</a></div>
+                            <h4 class="no-margin">Updates</h4><a href="" style="color: white;float: right;margin-top: -20px;" ng-click="box3=!box3"><i class="fa fa-chevron-down"></i></a></div>
                     </div>
-                    <div class="panel-body" data-slide-toggle="box3" data-slide-toggle-duration="1000">
+                    <div class="panel-body" data-slide-toggle="box3" data-slide-toggle-duration="500">
                         <div class="col-xs-12">
                             <ul class="list-unstyled list-borded updates_list">
                                 <li>
@@ -105,9 +89,9 @@
                                             <span class="fa fa-share-alt"></span>
                                         </span>
                                         <ul class="dropdown-menu text-left" aria-labelledby="dropdownMenu1">
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-facebook"></i> - 20K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-twitter"></i> - 30K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-google-plus"></i> - 5K Likes</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-facebook"></i> - 20K Share</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-twitter"></i> - 30K Share</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-google-plus"></i> - 5K Share</a></li>
                                         </ul>
                                     </div>
                                     <article>
@@ -121,9 +105,9 @@
                                             <span class="fa fa-share-alt"></span>
                                         </span>
                                         <ul class="dropdown-menu text-left" aria-labelledby="dropdownMenu1">
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-facebook"></i> - 20K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-twitter"></i> - 30K Likes</a></li>
-                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-google-plus"></i> - 5K Likes</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-facebook"></i> - 20K Share</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-twitter"></i> - 30K Share</a></li>
+                                            <li class="no-padding no-margin"><a href=""><i class="fa fa-google-plus"></i> - 5K Share</a></li>
                                         </ul>
                                     </div>
                                     <article>
@@ -137,9 +121,9 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <div class="panel-title">
-                            <h4 class="no-margin">Comments</h4><a href="" style="color: white;float: right;margin-top: -20px;" ng-click="box4=!box4">click</a></div>
+                            <h4 class="no-margin">Comments</h4><a href="" style="color: white;float: right;margin-top: -20px;" ng-click="box4=!box4"><i class="fa fa-chevron-down"></i></a></div>
                     </div>
-                    <div class="panel-body" data-slide-toggle="box4" data-slide-toggle-duration="1000">
+                    <div class="panel-body" data-slide-toggle="box4" data-slide-toggle-duration="500">
                         <div class="col-xs-12">
                             <ul class="commentList">
                                 <li>
@@ -206,14 +190,15 @@
                 <div class="panel panel-primary col-xs-12 no-padding">
                     <div class="panel-heading  no-radius">
                         <div class="panel-title text-center">
-                            <h3 class="no-margin">Goal - $2000K</h3></div>
+                            <h2 class=""><strong>Goal - $2000K</strong></h2>
+                        </div>
                     </div>
                     <div class="panel-body">
-                       <div id="circle"></div>
+                        <div id="circle"></div>
                     </div>
                     <div class="panel-heading no-radius">
                         <div class="panel-title text-center ">
-                            <h3 class="no-margin">Need - $2000K</h3></div>
+                            <h3 class="no-margin">Need - $600K</h3></div>
                     </div>
                 </div>
                 <div class="panel panel- col-xs-12 no-padding">
@@ -228,14 +213,17 @@
                     </div>
                     <div class="panel-body text-center">
                         <div class="col-xs-12 col-sm-12">
-                            <a href="" class="thumbnail">
-                                <img src="http://placehold.it/800x500" alt="" class="img-responsive">
-                            </a>
+                            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/14V2T1EONR8" frameborder="0" allowfullscreen></iframe>
                         </div>
                         <!-- <a href=""> more..</a> -->
                     </div>
                 </div>
                 <div class="panel panel-default col-xs-12 no-padding">
+                    <div class="panel-heading no-radius text-center">
+                        <div class="panel-title">
+                            <h4 class="no-margin">Donations</h4>
+                        </div>
+                    </div>
                     <div class="panel-heading no-padding">
                         <ul class="navigation list-inline no-margin" ng-init="tab = 1">
                             <li class="active" ng-class="{active:tab===1}">
@@ -271,6 +259,12 @@
                                         <li>
                                             <h2 class="no-margin">$400</h2>
                                             <h4 class="no-margin"><small>by John Doe on 4th June</small></h4></li>
+                                        <li>
+                                            <h2 class="no-margin">$1000</h2>
+                                            <h4 class="no-margin"><small>by John Doe on 4th June</small></h4></li>
+                                        <li>
+                                            <h2 class="no-margin">$2000</h2>
+                                            <h4 class="no-margin"><small>by John Doe on 4th June</small></h4></li>
                                     </ul>
                                 </div>
                             </div>
@@ -282,17 +276,17 @@
     </div>
 </div>
 <script>
-$(document).ready(function(){
-  //circular progress bar code here 
-   var target="500";
-   var current="365";
-   var total=(current/target)*100;
-        $( '#circle' ).progressCircle({
-            nPercent        : total,
-            showPercentText : true,
-            thickness       : "5",
-            circleSize      : "280"
-        });
+$(document).ready(function() {
+    //circular progress bar code here 
+    var target = "500";
+    var current = "365";
+    var total = (current / target) * 100;
+    $('#circle').progressCircle({
+        nPercent: total,
+        showPercentText: true,
+        thickness: "5",
+        circleSize: "230"
+    });
 
 });
 </script>
