added geo location

--- a/easy_funding/public/templates/dashboard/singlecampagin/dashboard_single_campagin.html
+++ b/easy_funding/public/templates/dashboard/singlecampagin/dashboard_single_campagin.html
@@ -17,12 +17,12 @@
                                             <h2 class="no-margin">Campaign Title</h2></div>
                                     </div>
                                     <div class="panel-body">
-                                        <div class="col-xs-12 col-sm-4">
+                                        <div class="col-xs-4">
                                             <a href="" class="thumbnail">
                                                 <img src="http://placehold.it/800x500" alt="">
                                             </a>
                                         </div>
-                                        <div class="col-xs-12 col-sm-8">
+                                        <div class="col-xs-8">
                                             <form action="" method="POST" role="form">
                                                 <div class="form-group">
                                                     <textarea class="form-control" name="Comments[text]" rows="6" title="Type your comment here..." id="commentTextBox" placeholder="Updates here...."></textarea>
