--- a/easy_funding/public/templates/dashboard/singlecampagin/with_draw.html
+++ b/easy_funding/public/templates/dashboard/singlecampagin/with_draw.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-xs-12 col-sm-9">
                 <div ng-include="'templates/dashboard/singlecampagin/single_campaign_menu.html'"></div>
-                <div class="col-xs-12 col-sm-8 no-padding">
+                <div class="col-xs-12 col-sm-8 no-padding" ng-hide="withdraw">
                     <legend class="text-primary">Please Read this below information before continue...</legend>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     <ul>
@@ -29,14 +29,14 @@
                             <p><a href="">Cancel</a></p>
                         </div>
                         <div class="col-xs-12 col-sm-4 no-padding text-center">
-                            <a class="btn btn-primary " href="" ng-click="send=!send">I Understand</a>
+                            <a class="btn btn-primary " href="" ng-click="understand()">I Understand</a>
                         </div>
                         <div class="col-xs-12 col-sm-4 no-padding text-right">
                             <p><a href="">Get Help</a></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-8 no-padding" ng-show="send" data-slide-toggle-duration="1000">
+                <div class="col-xs-12 col-sm-8 no-padding" ng-show="sendform">
                     <legend class="text-primary">Grant Withdrawal Access</legend>
                     <p class="text-danger">**You’re about to give away access to ALL of this campaign money</p>
                     <p>*After 72 hours, control of the money will go back to you. You can then attempt another transfer.</p>
@@ -56,7 +56,7 @@
                             </div>
                         </form>
                         <div class=" btn-group">
-                            <button class="btn btn-primary" ng-click="sendConfirm=!sendConfirm">Continue</button>
+                            <button class="btn btn-primary" ng-click="sendConfirm()">Continue</button>
                         </div>
                         <p></p>
                         <p class="text-center">
@@ -65,7 +65,7 @@
                         <p class="text-center">Need help? <a href="" class="text-underline">Contact Us</a></p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-8 no-padding" ng-show="sendConfirm" data-slide-toggle-duration="1000">
+                <div class="col-xs-12 col-sm-8 no-padding" ng-show="confirm">
                     <legend class="text-primary">Are You Sure?</legend>
                     <p class="text-danger">**You granted withdrawal access to</p>
                     <div class="col-xs-12 no-padding">
@@ -81,13 +81,13 @@
                                 <h4>2nd sept 2015</h4></li>
                         </ul>
                         <div class="btn-group">
-                            <button class="btn btn-primary" ng-click="sure=!sure">I’m Sure</button>
+                            <button class="btn btn-primary" ng-click="sure()">I’m Sure</button>
                         </div>
                         <p></p>
-                        <p><a href="" class="text-underline" ng-click="sendConfirm=!sendConfirm">Cancel</a></p>
+                        <p><a href="" class="text-underline" ng-click="understand()">Cancel</a></p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-8 no-padding" ng-show="sure" data-slide-toggle-duration="1000">
+                <div class="col-xs-12 col-sm-8 no-padding" ng-show="done">
                     <legend class="text-primary">Access Invitation Sent !</legend>
                     <p class="text-danger">**You’re about to give away access to ALL of this campaign money</p>
                     <p>*After 72 hours, control of the money will go back to you. You can then attempt another transfer.</p>
@@ -104,7 +104,7 @@
                                 <h4>2nd sept 2015</h4></li>
                         </ul>
                         <div class="btn-group">
-                            <button class="btn btn-primary">OK</button>
+                            <button class="btn btn-primary" ng-click="thanks()">OK</button>
                         </div>
                     </div>
                 </div>
