--- a/easy_funding/public/templates/dashboard/settings/delete_account.html
+++ b/easy_funding/public/templates/dashboard/settings/delete_account.html
@@ -1,6 +1,6 @@
 <section>
     <div class="container no-padding">
-        <div class="col-md-12 no-padding margin-top">
+        <div class="col-md-12 no-padding ">
             <div class="col-xs-12 col-sm-3 no-padding">
                 <div ng-include="'templates/dashboard/dashboard_panel.html'"></div>
             </div>
