--- a/easy_funding/public/templates/dashboard/dashboard.html
+++ b/easy_funding/public/templates/dashboard/dashboard.html
@@ -4,70 +4,111 @@
             <div class="col-xs-12 col-sm-3 no-padding">
                 <div ng-include="'templates/dashboard/dashboard_panel.html'"></div>
             </div>
-            <div class="col-xs-12 col-sm-6 ">
-                <div class="col-xs-12 col-sm-12 col-md-12 thumbnail dashboard_campagin_list no-padding">
-                    <a href="#/dashboard_single_campagin">
-                        <img src="http://placehold.it/800x500" alt="" class="img-responsive">
-                        <div class="post-content post-content-top">
-                            <div class="col-xs-12 col-sm-12 col-md-12 no-padding">
-                                <div class="col-xs-6 col-sm-8 no-padding likes-info">
-                                    <h4>20 Likes </h4>
-                                </div>
-                                <div class="col-xs-6 col-sm-4 no-padding text-right goal-info">
-                                    <h4>Goal $2000K</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="post-content">
-                            <div class="col-xs-12 col-sm-12 col-md-12 campagin-info">
-                                <div class="col-xs-12 col-sm-8 no-padding ">
-                                    <h4 class="text-white">Campaign Title 1</h4>
-                                    <h4>
-                                <ul class="list-inline">
-                                    <li><small class="text-white">Posted on Jan 2015 ,</small></li>
-                                    <li><small class="text-white">Last updated on 8 Jan</small></li>
-                                </ul>
-                                </h4>
-                                </div>
-                                <div class="col-xs-12 col-sm-4 no-padding text-right">
-                                    <h4 class="text-white">Raised - $2000K</h4>
-                                    <h4><small class="text-white">By 2358 Donators</small></h4>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 thumbnail dashboard_campagin_list no-padding">
-                    <img src="http://placehold.it/800x500" alt="" class="img-responsive">
-                    <div class="post-content post-content-top">
-                        <div class="col-xs-12 col-sm-12 col-md-12 no-padding">
-                            <div class="col-xs-6 col-sm-8 no-padding likes-info">
-                                <h4>20 Likes </h4>
-                            </div>
-                            <div class="col-xs-6 col-sm-4 no-padding text-right goal-info">
-                                <h4>Goal $2000K</h4>
-                            </div>
-                        </div>
+            <div class="col-xs-12 col-sm-8 ">
+                <div class="col-xs-12 no-padding thumbnail">
+                    <div class=" col-xs-12 col-sm-12 col-md-6 no-padding">
+                        <img src="http://placehold.it/800x450" alt="" class="img-responsive">
                     </div>
-                    <div class="post-content">
-                        <div class="col-xs-12 col-sm-12 col-md-12 campagin-info">
-                            <div class="col-xs-12 col-sm-8 no-padding ">
-                                <h4 class="text-white">Campaign Title 2</h4>
-                                <h4>
-                                <ul class="list-inline">
-                                    <li><small class="text-white">Posted on Jan 2015 ,</small></li>
-                                    <li><small class="text-white">Last updated on 8 Jan</small></li>
-                                </ul>
-                                </h4>
-                            </div>
-                            <div class="col-xs-12 col-sm-4 no-padding text-right">
-                                <h4 class="text-white">Raised - $2000K</h4>
-                                <h4><small class="text-white">By 2358 Donators</small></h4>
-                            </div>
-                        </div>
+                    <div class="col-xs-12 col-sm-12 col-md-6">
+                        <ul class="list-unstyled">
+                            <li>
+                                <h4><a href="#/dashboard_single_campagin">Campagin Title</a></h4>
+                            </li>
+                            <li>
+                                <p>Posted On 5th Sept | <span class="text-danger">Last Updated On 21 Sept</span></p>
+                            </li>
+                            <li>
+                                <h4>Goal : $200K</h4>
+                            </li>
+                            <li>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                                        <span class="">45% Raised</span>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <h4>Raised : $65K by <small>200 Donators</small></h4>
+                            </li>
+                            <li>
+                                <h5></h5>
+                            </li>
+                            <li>
+                                <h5>liked : 40</h5>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xs-12 no-padding thumbnail">
+                    <div class=" col-xs-12 col-sm-12 col-md-6 no-padding">
+                        <img src="http://placehold.it/800x450" alt="" class="img-responsive">
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-6">
+                        <ul class="list-unstyled">
+                            <li>
+                                <h4><a href="#/dashboard_single_campagin">Campagin Title</a></h4>
+                            </li>
+                            <li>
+                                <p>Posted On 5th Sept | <span class="text-danger">Last Updated On 21 Sept</span></p>
+                            </li>
+                            <li>
+                                <h4>Goal : $200K</h4>
+                            </li>
+                            <li>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                                        <span class="">45% Raised</span>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <h4>Raised : $65K by <small>200 Donators</small></h4>
+                            </li>
+                            <li>
+                                <h5></h5>
+                            </li>
+                            <li>
+                                <h5>liked : 40</h5>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-xs-12 no-padding thumbnail">
+                    <div class=" col-xs-12 col-sm-12 col-md-6 no-padding">
+                        <img src="http://placehold.it/800x450" alt="" class="img-responsive">
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-6">
+                        <ul class="list-unstyled">
+                            <li>
+                                <h4><a href="#/dashboard_single_campagin">Campagin Title</a></h4>
+                            </li>
+                            <li>
+                                <p>Posted On 5th Sept | <span class="text-danger">Last Updated On 21 Sept</span></p>
+                            </li>
+                            <li>
+                                <h4>Goal : $200K</h4>
+                            </li>
+                            <li>
+                                <div class="progress">
+                                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+                                        <span class="">45% Raised</span>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <h4>Raised : $65K by <small>200 Donators</small></h4>
+                            </li>
+                            <li>
+                                <h5></h5>
+                            </li>
+                            <li>
+                                <h5>liked : 40</h5>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </section>
