--- a/easy_funding/public/templates/dashboard/dashboard_panel.html
+++ b/easy_funding/public/templates/dashboard/dashboard_panel.html
@@ -1,58 +1,32 @@
-<div class="col-xs-12 user-details">
-    <div class="user-image">
-        <img src="http://placehold.it/800x500" alt="Your Last Posted Campagin" title="Karan Singh Sisodia" class="img-circle">
-    </div>
-    <div class="user-info-block">
-        <div class="user-heading">
-            <h3>Karan Singh Sisodia</h3>
-            <span class="help-block">Chandigarh, IN</span>
-            <!-- <div class="col-xs-12 no-padding">
-                <div class="btn btn-group btn-group-justified" >
-                    <button class="btn btn-primary">New Campagin</button>
-                </div>
-            </div> -->
-            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-                <div class="btn-group" role="group">
-                    <a href="#/start_fund_rasing" type="button" class="btn btn-danger btn-lg ">Post New Campaign</a>
-                </div>
+<aside class=" col-xs-12 hidden-xs">
+    <div class="col-xs-12 no-padding">
+        <div class="user-profile-image">
+            <img src="img/profile-menu.png" alt="" class="img-responsive">
+            <div class="user-title-text">
+                <span>John</span>
             </div>
-            <br>
+            <div class="circle-title hidden-sm">
+                <span>Hi</span>
+            </div>
         </div>
-        <div class="clearfix"></div>
-        <ul class="navigation list-inline hidden-xs" ng-init="tab = 1">
-            <li class="active" ng-class="{active:tab===1}">
-                <a href ng-click="tab = 1">
-                    <span class="glyphicon glyphicon-user"></span> My campaigns
-                </a>
+    </div>
+    <div class="clearfix"></div>
+    <div class="navbar user-nav">
+        <ul class="nav navbar-nav user-nav">
+            <li class="active">
+                <a href="#/dashboard">My Campaigns</a>
             </li>
-            <li ng-class="{active:tab===2}">
-                <a href ng-click="tab = 2">
-                    <span class="glyphicon glyphicon-cog"></span> Settings
-                </a>
+            <li>
+                <a href="#/settings">Profile Settings</a>
+            </li>
+            <li>
+                <a href="#/account_status">Account Status</a>
             </li>
         </ul>
-        <div class="user-body hidden-xs">
-            <div class="tab-content">
-                <div id="information" class="tab-pane active" ng-show="tab===1">
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#/dashboard">All campaigns</a>
-                        </li>
-                        <li>
-                            <a href="#/dashboard_single_campagin"><h5>Campaign Title 1 </h5></a>
-                        </li>
-                        <li>
-                            <a href="#/dashboard_single_campagin"><h5>Campaign Title 2 </h5></a>
-                        </li>
-                    </ul>
-                </div>
-                <div id="settings" class="tab-pane active" ng-show="tab===2">
-                    <ul class="list-unstyled">
-                        <li><a href="#/settings"><h5> Settings</h5></a></li>
-                        <li><a href="#/account_status"><h5>Account status</h5></a></li>
-                    </ul>
-                </div>
-            </div>
+    </div>
+    <div class="col-xs-12 text-center">
+        <div class="btn btn-group ">
+            <a href="#/start_fund_rasing" class="btn btn-danger">New Campagin</a>
         </div>
     </div>
-</div>
+</aside>
