--- a/easy_funding/public/templates/dashboard/settings/account_status.html
+++ b/easy_funding/public/templates/dashboard/settings/account_status.html
@@ -7,12 +7,26 @@
             <div class="col-xs-12 col-sm-9 col-md-6">
                 <div class="col-xs-12 col-sm-12 col-md-12 no-padding">
                     <h3>Account Status - <small>Manage your easy funding account status below</small></h3>
-                    <br>
                     <p>Your Account is live!</p>
-                    <br>
-                    <h4>Join Date</h4>
-                    <p>June 23 2015</p>
-                    <br>
+                    <ul class="list-unstyled status_list">
+                        <li>
+                            <li>
+                                <h4>Join Date</h4>
+                                <p>June 23 2015</p>
+                            </li>
+                            <li>
+                                <h4>Last Updated On</h4>
+                                <p>Sept 25 2015</p>
+                            </li>
+                            <li>
+                                <h4>Campaign Posted</h4>
+                                <p>3 <a href="#/dashboard">View Campaign</a></p>
+                            </li>
+                            <li>
+                                <h4>Last Edited Campaign</h4>
+                                <a href="#/dashboard_single_campagin">Campaign Title</a>
+                            </li>
+                    </ul>
                     <ul class="list-unstyled list-inline red">
                         <li><a href="#/" target="_blank">Share Facebook</a></li><span> | </span>
                         <li><a href="#/" target="_blank">Common Questions</a></li><span> | </span>
