--- a/easy_funding/public/templates/dashboard/singlecampagin/single_campaign_menu.html
+++ b/easy_funding/public/templates/dashboard/singlecampagin/single_campaign_menu.html
@@ -1,46 +1,51 @@
-<div class="row">
-    <legend>
-        Campaign Title
-    </legend>
-    <div class="col-xs-12 no-padding">
-        <div class="col-sm-3">
+<div class="row ">
+    <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-12">
+            <h4>Campaign Title</h4>
+            <a href="#/dashboard_single_campagin" class="btn btn-primary">Give An Update</a>
+        </div>
+    </div>
+    <div class="clearfix"></div>
+    <hr>
+    <div class="col-xs-12 no-padding ">
+        <div class="col-xs-6 col-sm-3">
             <div class="campagin-widget well well-sm">
                 <div class="text">
                     <var>75%</var>
-                    <label class="text-muted">Donations Complete</label>
+                    <label class="text-muted hidden-xs">Raised</label>
                 </div>
                 <div class="options">
-                    <a href="#/donations" class="btn btn-danger">View Donations</a>
+                    <a href="#/donations" class="btn btn-danger"> Donations</a>
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-xs-6 col-sm-3">
             <div class="campagin-widget well well-sm">
                 <div class="text">
                     <var>614</var>
-                    <label class="text-muted">Comments</label>
+                    <label class="text-muted hidden-xs">Comments</label>
                 </div>
                 <div class="options">
-                    <a href="#/comments" class="btn btn-info">View Comments</a>
+                    <a href="#/comments" class="btn btn-info">Comments</a>
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-xs-6 col-sm-3">
             <div class="campagin-widget well well-sm">
                 <div class="text">
                     <var><i class="glyphicon glyphicon-edit"></i></var>
-                    <label class="text-muted">Edit Campaign</label>
+                    <label class="text-muted hidden-xs">Campaign</label>
                 </div>
                 <div class="options">
                     <a href="#/edit_campagin" class="btn btn-primary"> Edit Here</a>
                 </div>
             </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-xs-6 col-sm-3">
             <div class="campagin-widget well well-sm">
                 <div class="text">
                     <var><i class="glyphicon glyphicon-wrench"></i></var>
-                    <label class="text-muted">With Draw</label>
+                    <label class="text-muted hidden-xs">With Draw</label>
                 </div>
                 <div class="options">
                     <a href="#/with_draw" class="btn btn-warning"> With Draw</a>
