--- a/easy_funding/public/templates/fundforms/start_fund_rasing.html
+++ b/easy_funding/public/templates/fundforms/start_fund_rasing.html
@@ -127,11 +127,11 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="campaign_title">Campaign Description</label>
-                                    <textarea name="" id="" cols="60" rows="15" class="form-control" placeholder="Type description here..."></textarea>
+                                    <textarea name="" id="" cols="60" rows="15" class="form-control vresize" placeholder="Type description here..."></textarea>
                                 </div>
                             </div>
                             <div class="clearfix">
-                                <span ng-click="tab = 1" class="pointer">Go Back</span>
+                                <a href="" ng-click="tab = 1">Go Back</a>
                                 <a href='' class="btn btn-primary pull-right" ng-click="tab = 3">Next</a>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                                 <input type="text" class="form-control" id="" placeholder="paste twitter url here">
                             </div>
                             <div class="clearfix">
-                                <span class="pointer">Go Back</span>
+                                <a href="" ng-click="tab = 2">Go Back</a>
                                 <a href="#/dashboard" class="btn btn-primary pull-right">Submit</a>
                             </div>
                         </form>
