--- a/easy_funding/public/templates/home.html
+++ b/easy_funding/public/templates/home.html
@@ -46,27 +46,15 @@
         </div>
     </div>
 </header>
-<form action="" autocomplete="on">
-    <input id="search" name="search" type="text" class="search1" placeholder="What i am looking for ?">
-    <input id="search_submit" value="Rechercher" type="submit">
-</form>
 <!-- <div class="search visible-xs" search-form="search-form"></div> -->
 <section id="" class="">
-    <div class="visible-xs">
-        <ul class="list-unstyled">
-            <li class="">
-                <form action="" autocomplete="on">
-                    <input id="search" name="search" type="text" class="form-control" placeholder="What i am looking for ?">
-                    <input id="" value="Rechercher" type="submit">
-                </form>
-            </li>
-        </ul>
-    </div>
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <legend>LATEST</legend>
-                <div class="col-xs-12 col-sm-12 col-md-6">
+                <div class="col-xs-12">
+                    <legend>LATEST</legend>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <div class="thumbnail clearfix">
                         <img src="http://placehold.it/800x500" alt="">
                         <div class="col-xs-12 campagin text-left">
@@ -94,14 +82,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-6 text-left no-padding-right">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 text-left">
                     <div class="row">
-                        <div class="col-xs-12 no-padding">
-                            <div class="col-xs-12 col-sm-6 col-md-4 no-padding-left">
+                        <div class="col-xs-12 padding-responsive-null">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 responsive-padding-off no-padding-left">
                                 <div class="thumbnail campagin">
                                     <img src="http://placehold.it/800x500" alt="">
                                     <h4 class="campagin-title"><a href="" title="Campaign Title With Large Title Here">&nbsp;Campaign Title With Large Title Here</a></h4>
-                                    <p class="sub-text">&nbsp;on 25 Jun 2015 by john</p>
+                                    <p class="sub-text">&nbsp;on 25/06/2015 by john</p>
                                     <div class="col-xs-12 no-padding">
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
@@ -112,11 +100,11 @@
                                     <h4 class=""><small class="sub-text">&nbsp;Raised : </small> <strong class="text-danger">$2000k</strong></h4>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 no-padding-left">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 responsive-padding-off no-padding-left">
                                 <div class="thumbnail campagin">
                                     <img src="http://placehold.it/800x500" alt="">
                                     <h4 class="campagin-title"><a href="#/single_campagin" title="Campaign Title With Large Title Here">&nbsp;Campaign Title With Large Title Here</a></h4>
-                                    <p class="sub-text">&nbsp;on 25 Jun 2015 by john</p>
+                                    <p class="sub-text">&nbsp;on 25/06/2015 by john</p>
                                     <div class="col-xs-12 no-padding">
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
@@ -127,11 +115,11 @@
                                     <h4 class=""><small class="sub-text">&nbsp;Raised : </small> <strong class="text-danger">$2000k</strong></h4>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 no-padding-left">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 responsive-padding-off no-padding-left">
                                 <div class="thumbnail campagin">
                                     <img src="http://placehold.it/800x500" alt="">
                                     <h4 class="campagin-title"><a href="#/single_campagin" title="Campaign Title With Large Title Here">&nbsp;Campaign Title With Large Title Here</a></h4>
-                                    <p class="sub-text">&nbsp;on 25 Jun 2015 by john</p>
+                                    <p class="sub-text">&nbsp;on 25/06/2015 by john</p>
                                     <div class="col-xs-12 no-padding">
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
@@ -142,11 +130,11 @@
                                     <h4 class=""><small class="sub-text">&nbsp;Raised : </small> <strong class="text-danger">$2000k</strong></h4>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 no-padding-left">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 responsive-padding-off no-padding-left">
                                 <div class="thumbnail campagin">
                                     <img src="http://placehold.it/800x500" alt="">
                                     <h4 class="campagin-title"><a href="#/single_campagin" title="Campaign Title With Large Title Here">&nbsp;Campaign Title With Large Title Here</a></h4>
-                                    <p class="sub-text">&nbsp;on 25 Jun 2015 by john</p>
+                                    <p class="sub-text">&nbsp;on 25/06/2015 by john</p>
                                     <div class="col-xs-12 no-padding">
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
@@ -157,11 +145,11 @@
                                     <h4 class=""><small class="sub-text">&nbsp;Raised : </small> <strong class="text-danger">$2000k</strong></h4>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 no-padding-left">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 responsive-padding-off no-padding-left">
                                 <div class="thumbnail campagin">
                                     <img src="http://placehold.it/800x500" alt="">
                                     <h4 class="campagin-title"><a href="#/single_campagin" title="Campaign Title With Large Title Here">&nbsp;Campaign Title With Large Title Here</a></h4>
-                                    <p class="sub-text">&nbsp;on 25 Jun 2015 by john</p>
+                                    <p class="sub-text">&nbsp;on 25/06/2015 by john</p>
                                     <div class="col-xs-12 no-padding">
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
@@ -172,11 +160,11 @@
                                     <h4 class=""><small class="sub-text">&nbsp;Raised : </small> <strong class="text-danger">$2000k</strong></h4>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4 no-padding-left">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 responsive-padding-off no-padding-left">
                                 <div class="thumbnail campagin">
                                     <img src="http://placehold.it/800x500" alt="">
                                     <h4 class="campagin-title"><a href="#/single_campagin" title="Campaign Title With Large Title Here">&nbsp;Campaign Title With Large Title Here</a></h4>
-                                    <p class="sub-text">&nbsp;on 25 Jun 2015 by john</p>
+                                    <p class="sub-text">&nbsp;on 25/06/2015 by john</p>
                                     <div class="col-xs-12 no-padding">
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
@@ -192,11 +180,11 @@
                 </div>
             </div>
         </div>
-        <hr>
         <div class="row" id="">
             <div class="col-xs-12">
-                <legend>MOST POPULAR</legend>
                 <div class="col-md-12 portfolio-item">
+                    <hr>
+                    <legend>MOST POPULAR</legend>
                     <div class="row">
                         <div class="col-md-3 col-sm-6 hero-feature ">
                             <div class="thumbnail campagin">
@@ -326,8 +314,8 @@
         <hr>
         <div class="row" id="">
             <div class="col-xs-12">
-                <legend>LESS TIME TO FUND</legend>
                 <div class="col-md-12 portfolio-item">
+                    <legend>LESS TIME TO FUND</legend>
                     <div class="row">
                         <div class="col-md-3 col-sm-6 hero-feature">
                             <div class="thumbnail campagin">
@@ -457,8 +445,8 @@
         <hr>
         <div class="row" id="">
             <div class="col-xs-12">
-                <legend>NEAR TO COMPLETE</legend>
                 <div class="col-md-12 portfolio-item">
+                    <legend>NEAR TO COMPLETE</legend>
                     <div class="row">
                         <div class="col-md-3 col-sm-6 hero-feature">
                             <div class="thumbnail campagin">
