--- a/easy_funding/public/templates/dashboard/dashboard_panel.html
+++ b/easy_funding/public/templates/dashboard/dashboard_panel.html
@@ -1,4 +1,4 @@
-<aside class=" col-xs-12 hidden-xs">
+<aside class=" col-xs-12 hidden-xs dashboard_panel">
     <div class="col-xs-12 no-padding">
         <div class="user-profile-image">
             <img src="img/profile-menu.png" alt="" class="img-responsive">
@@ -26,7 +26,7 @@
     </div>
     <div class="col-xs-12 text-center">
         <div class="btn btn-group ">
-            <a href="#/start_fund_rasing" class="btn btn-danger">New Campagin</a>
+            <a href="#/start_fund_rasing" class="btn btn-danger">New Campaign</a>
         </div>
     </div>
 </aside>
