--- a/easy_funding/public/templates/dashboard/dashboard.html
+++ b/easy_funding/public/templates/dashboard/dashboard.html
@@ -12,7 +12,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <ul class="list-unstyled">
                             <li>
-                                <h4><a href="#/dashboard_single_campagin">Campagin Title</a></h4>
+                                <h4><a href="#/dashboard_single_campagin">Campaign Title</a></h4>
                             </li>
                             <li>
                                 <p>Posted On 5th Sept | <span class="text-danger">Last Updated On 21 Sept</span></p>
@@ -46,7 +46,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <ul class="list-unstyled">
                             <li>
-                                <h4><a href="#/dashboard_single_campagin">Campagin Title</a></h4>
+                                <h4><a href="#/dashboard_single_campagin">Campaign Title</a></h4>
                             </li>
                             <li>
                                 <p>Posted On 5th Sept | <span class="text-danger">Last Updated On 21 Sept</span></p>
@@ -80,7 +80,7 @@
                     <div class="col-xs-12 col-sm-12 col-md-6">
                         <ul class="list-unstyled">
                             <li>
-                                <h4><a href="#/dashboard_single_campagin">Campagin Title</a></h4>
+                                <h4><a href="#/dashboard_single_campagin">Campaign Title</a></h4>
                             </li>
                             <li>
                                 <p>Posted On 5th Sept | <span class="text-danger">Last Updated On 21 Sept</span></p>
